Alignment and Hover bug fixed

--- a/assets/css/meyawo.css
+++ b/assets/css/meyawo.css
@@ -12263,7 +12263,7 @@ pre .code {
   padding: 100px 0 !important;
 }
 
-button{
+/* button{
 width: 200px;
 padding: 15px 0;
 text-align: center;
@@ -12294,4 +12294,4 @@ button:hover span{
 button:hover {
   border: none;
   color: #fff;
-}
+} */
